force-app/main/default/objects/TCP_Products_Sales_Line__c/TCP_Products_Sales_Line__c.object-meta.xml
<CustomObject>
    <description>This is the object used to map the products with the respective sales org and distribution channel</description>
    <label>Products Sales Line</label>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>Sales Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Sales Lines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>