force-app/main/default/objects/TCP_Products_Sales_Line__c/fields/STNSAP_ProdSL_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>STNSAP_ProdSL_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>STNSAP ProdSL ExternalId</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>