force-app/main/default/objects/TCP_Products_Sales_Line__c/fields/TCP_P94_ProdSL_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>TCP_P94_ProdSL_ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>TCP P94 ProdSL ExternalID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>