force-app/main/default/objects/TCP_Products_Sales_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Distribution_Channel__c</columns>
    <columns>STNSAP_ProdSL_ExternalId__c</columns>
    <columns>TCP_P94_ProdSL_ExternalID__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>